--- a/ServiceHost/Areas/Administration/Pages/Shared/Menu.cshtml
+++ b/ServiceHost/Areas/Administration/Pages/Shared/Menu.cshtml
@@ -1,6 +1,6 @@
 ﻿@inject _0_Framework.Application.IAuthHelper AuthHelper;
 @{
-    var currentAccout = AuthHelper.CurrentAccountRole();
+    var currentAccout = AuthHelper.CurrentAccountInfo();
 }
 
 <div class="left side-menu">
@@ -11,7 +11,7 @@
             </div>
             <div class="user-info">
                 <div class="dropdown">
-                    <a href="#" class="dropdown-toggle" data-toggle="dropdown" aria-expanded="false">جان دوو <span class="caret"></span></a>
+                    <a href="#" class="dropdown-toggle" data-toggle="dropdown" aria-expanded="false">@currentAccout.Fullname <span class="caret"></span></a>
                     <ul class="dropdown-menu">
                         <li><a href="javascript:void(0)"><i class="md md-face-unlock"></i> Profile<div class="ripple-wrapper"></div></a></li>
                         <li><a href="javascript:void(0)"><i class="md md-settings"></i> Settings</a></li>
@@ -20,7 +20,7 @@
                     </ul>
                 </div>
 
-                <p class="text-muted m-0">مدیر سیستم</p>
+                <p class="text-muted m-0">@currentAccout.Role</p>
             </div>
         </div>
         <!--- Divider -->
@@ -36,7 +36,7 @@
                 <li>
                     <a asp-page="/Inventory/index" class="waves-effect"><i class="md md-home"></i><span> انبارداری </span></a>
                 </li>
-                @if (AuthHelper.CurrentAccountRole() == "1")
+                @if (AuthHelper.CurrentAccountRole() == "2")
                 {
                     <li class="has_sub">
                         <a class="waves-effect"><i class="md md-mail"></i><span> فروشگاه </span><span class="pull-right"><i class="md md-add"></i></span></a>
