--- a/ServiceHost/Pages/Account.cshtml
+++ b/ServiceHost/Pages/Account.cshtml
@@ -30,9 +30,9 @@
                     <div class="page-content-wrapper">
                         <div class="row">
                             <div class="col-sm-12 col-md-12 col-xs-12 col-lg-6">
-                                @* @if (Model.LoginMessage != null) *@
+                   
 
-                                @if (!string.IsNullOrWhiteSpace(Model.LoginMessage))
+                                @if (Model.LoginMessage != null)
                                 {
                                     <div class="alert alert-secondary">@Model.LoginMessage</div>
                                 }
